2004-12-09  Todd Berman  <tberman@off.net>

	* CSharpBindingCompilerManager.cs: mcs in Mono 1.1.3 now outputs error
	on stderr instead of stdout. The old code just inspected stdout, now
	we look at both.

2004-12-08  Everaldo Canuto  <everaldo_canuto@yahoo.com.br>

	* CSharpBindingCompilerManager.cs: Add support to multiple compilers
	in Makefiles generated by MonoDevelop.

2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>

	* CSharpLanguageBinding.cs: Added CommentTag to be used by (Un)CommentCode

2004-11-16  Todd Berman  <tberman@off.net>

	* CSharpBindingCompilerManager.cs: Properly output local assembly
	references.

2004-11-09  Todd Berman  <tberman@off.net>

	* CSharpBindingCompilerManager.cs: Use SAS for assembly detection.
	This doesnt seem to break anything for me.

2004-11-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
      
	* Parser/Parser.cs: Added HandlesFileExtension to work with new
	IParser

2004-11-01  Todd Berman  <tberman@off.net>

	* CSharpBindingExecutionManager.cs.in: Add fu to actually properly run
	the execute script.

2004-09-25  Peter Johanson <latexer@gentoo.org>

	* CSharpBindingCompilerManager.cs: Hack to a hack to fix compilation
	on 1.1.1 with the new corlib location.

2004-09-20  Valters Svabe  <valters@inbox.lv>

	* CSharpBindingExecutionManager.cs.in: Respect PauseConsoleOutput
	option.

2004-07-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/Resolver.cs: When locating the inner or outer classes, get the 
	  class from the parser service, since it has all type names resolved 
	  (the one got from the compilation unit does not).

2004-07-05  Todd Berman  <tberman@off.net>

	* CSharpBindingExecutionManager.cs: removed.
	* CSharpBindingExecutionManager.cs.in: Added
	* Makefile.am: modified.
	This patch is from Marcin Krzyzanowski <krzak@pld-linux.org> and it
	fixes mint issues.

2004-07-04  John Luke  <jluke@cfl.rr.com>

	* Gui/OutputOptionsPanel.cs: use MessageService, remove ResourceService
