@@ -637,19 +637,19 @@ namespace CSharpBinding
 
 		bool setmsg ()
 		{
-			((IStatusBarService)ServiceManager.GetService (typeof (IStatusBarService))).SetMessage ("Compiling...");
+			Runtime.Gui.StatusBar.SetMessage ("Compiling...");
 			return false;
 		}
 
 		bool done ()
 		{
-			((SdStatusBar)((IStatusBarService)ServiceManager.GetService (typeof (IStatusBarService))).ProgressMonitor).Done ();
+			((SdStatusBar)Runtime.Gui.StatusBar.Control).Done ();
 			return false;
 		}
 
 		bool pulse () 
 		{
-			((SdStatusBar)((IStatusBarService)ServiceManager.GetService (typeof (IStatusBarService))).ProgressMonitor).Pulse ();
+			((SdStatusBar)Runtime.Gui.StatusBar.Control).Pulse ();
 			while (Gtk.Application.EventsPending ())
 				Gtk.Application.RunIteration ();
 			return false;
