@@ -1,3 +1,8 @@
+2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* CSharpBindingCompilerManager.cs: StatusBarService.ProgressMonitor is
+	not a StatusBar widget any more.
+
 2004-12-09  Todd Berman  <tberman@off.net>
 
 	* CSharpBindingCompilerManager.cs: mcs in Mono 1.1.3 now outputs error
